--- a/Barbearia Alura/style.css
+++ b/Barbearia Alura/style.css
@@ -1,48 +1,99 @@
-body {
+header {
+    background: #BBBBBB;
+}
+.box{
+    position: relative;
+    width: 940px;
+    margin: 0 auto;
 
 }
-p {
+
+nav{
+    position: absolute;
+    top: 110px;
+    right: 0;
+}
+nav li {
+    display: inline;
+    margin: 0 0 0 15px;
+
+}
+
+nav a {
+    text-transform: uppercase;
+    color: black;
+    font-weight: bold;
+    font-size: 22px;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: #C78C19;
+}
+.produtos {
+    width: 940px;
+    margin: 0 auto;
+    padding: 50px 0;
+}
+.produtos li {
+    display: inline-block;
     text-align: center;
+    width: 30%;
+    vertical-align: top;
+    margin: 0 1.5%;
+    padding: 30px 20px;
+    box-sizing: border-box;
+    border:2px solid black ;
+    border-radius: 15px;
 }
-#banner {
-    width: 100%;
+.produtos li:hover {
+    border-color: #C78C19;
 }
-.principal{
-    background: #CCCCCC;
-    padding: 30px;
+.produtos li:hover h2 {
+    font-size: 35px ;
 }
-.titulo-principal {
+
+.produtos h2 {
     font-size: 30px;
     font-weight: bold;
-    padding-left: 20px;
 }
-.titulo-centralizado {
-    text-align:center ;
+.produtos-preço {
+    font-size: 22px;
+    margin-top: 10px;
 }
-p {
+
+.produtos-descrição {
+    font-size: 18px;
+    padding: 5px;
+    font-weight: bold;
+}
+footer {
     text-align: center;
+    background: url("imagens/bg.jpg");
+    padding: 40px 0;
+    color: #C78C19;
+    font-size: 14px;
+    margin: 20px 0 0;
+
 }
-#missao{
-    font-size: 20px
+main {
+    width: 940px;
+    margin: 0 auto;
 }
 
-em strong {
-    color: red;
-}
-.items{
-    font-style: italic;
-}
-.beneficios{
-    background: white;
-    padding: 20px;
+form {
+    margin: 40px 0;
 }
 
-ul {
-    display: inline-block;
-    vertical-align: top;
-    width: 20%;
-    margin-right: 15%;
+form label {
+    display: block;
+    font-size: 20px;
+    margin: 0 0 10px;
 }
-.imagembeneficios {
+
+form input {
+    display: block;
+    margin: 0 0 20px;
+    padding: 10px 25px;
     width: 50%;
 }
