--- a/Barbearia Alura/style.css
+++ b/Barbearia Alura/style.css
@@ -85,7 +85,7 @@ form {
     margin: 40px 0;
 }
 
-form label , form p {
+form label , form legend {
     display: block;
     font-size: 20px;
     margin: 0 0 10px;
@@ -100,4 +100,34 @@ form label , form p {
 }
 .checkbox {
     margin: 20px 0;
+}
+.enviar {
+    width: 40%;
+    padding: 15px 0;
+    background: coral;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    border: none;
+    border-radius: 5px;
+    transition:1s all;
+    cursor: pointer;
+}
+.enviar:hover {
+    background: darkorange;
+    transform: scale(1.2) ;
+}
+
+table{
+    margin: 20px 0 40px;
+}
+thead {
+    background: gray;
+    color: white;
+    font-weight: bold;
+}
+
+td, th {
+    border: 1px solid #000000;
+    padding: 8px 15px;
 }
