--- a/imersão_Alura/AluraFlix_2/index.css
+++ b/imersão_Alura/AluraFlix_2/index.css
@@ -55,7 +55,7 @@ body {
   font-weight:bold;
   padding: 15px 20px;
   font-size: 16px;
-  borde-radius: 4px;
+  border-radius: 4px;
   margin-top: 20px;
   cursor: pointer;
   transition: .3s;
