--- a/imersão_Alura/Supertrunfo/index.css
+++ b/imersão_Alura/Supertrunfo/index.css
@@ -1,101 +1,73 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;700&display=swap');
 
-
-* {
-  text-align: center;
-  border: 0;
-  padding: 0;
-}
-
 body {
-  font-family: 'Poppins', sans-serif;
-  min-height: 400px;
-  background-image: url('https://www.alura.com.br/assets/img/imersoes/dev-2021/tabela-classificacao-bg.png');
-  background-color: #111;
-  background-size: 100%;
-  background-position: center;
+  font-family: 'Roboto Mono', monospace;
+  min-height: 854px;
+  background-image: url('https://www.alura.com.br/assets/img/imersoes/dev-2021/dia-07-super-trunfo-bg.png');
+  background-color: #000000;
+  background-size: cover;
+  background-position: center top;
   background-repeat: no-repeat;
+  padding-bottom: 20vh;
 }
 
 .container {
   text-align: center;
   padding: 20px;
-  height: 100vh;
 }
 
 .page-title {
   color: #ffffff;
-  margin: 0 0 5px;
-}
-
-.page-subtitle {
-  color: #ffffff;
-  margin-top: 5px;
-}
-
-.page-logo {
-  width: 200px;
-}
-
-.alura-logo {
-  width: 40px;
-  position: absolute;
-  top: 10px;
-  right: 10px;
-}
-
-table {
-  border: 2px solid white;
-  border-collapse: collapse;
-}
-
-h1 {
-  color: white;
-}
-
-th,
-tr,
-td {
-  padding: 10px;
-  color: whitesmoke;
-  text-align: center;
+  margin: 5px 0;
 }
 
 button {
-  border-radius: 8px;
-  width: 80px;
-  height: 40px;
-  cursor: pointer;
-  background-color: rgba(105,89,205, 0.719);
-  color: whitesmoke;
-  font-family: 'Poppins', sans-serif;
-  font-weight: 540;
+  padding: .8rem 1.5rem;
+  margin: 1rem 0;
+  border-radius: 5px;
+  border: none;
+  font-size: 1rem;
 }
 
-button:hover{
-  background-color: rgb(72,61,139);
-  transition: 0.5s;
+h2 {
+  color: white;
 }
 
-input {
-  border-radius: 8px;
-  height: 30px;
-  border: solid rgba(56, 56, 196, 0) 2px;
-  background-color: rgb(77, 77, 139);
-  color: whitesmoke;
-}
-
-.add-info {
-  margin-top: 20px;
-  padding: 20px;
+#carta-jogador {
+  width: 360px;
+  height: 500px;
+  overflow: auto;
   border-radius: 10px;
-  border: 2px;
-  border-collapse: collapse;
-  background-color: rgba(83, 75, 133, 0.432);
-
+  margin-bottom: 10px;
+  margin: 0 auto;
+  display: flex;
+  align-items: flex-end;
 }
-#tabelaJogadores img {
-  height: 120px;
-  width: 120px;
-  border-radius: 10px;
+
+#carta-jogador h3 {
+  text-align: center;
+}
+
+.carta-imagem {
+  border: 1px solid black;
+  height: 100px;
+  margin: 10px;
+}
+
+.carta-imagem img {
+  width: 100%;
+  height: 100%;
+}
+
+.carta-status {
+  height: 160px;
+  margin: 1.5rem;
+}
+
+.carta-status input {
+  margin: 20px 10px;
+}
+
+.opcoes {
+  color: white;
 }
